# InformationRetrieval-CPP

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  testCollection2-biGram-dictionary.txt  testCollection2-biGram-postings.txt  testCollection2-dictionary.txt  testCollection2-phrase-dictionary.txt  testCollection2-phrase-positionalPostings.txt  testCollection2-phrase-postings.txt  testCollection2-positionalPostings.txt  testCollection2-postings.txt  testCollection2-triGram-dictionary.txt  testCollection2-triGram-postings.txt
Document/: Collection.cpp  Collection.h  Document.cpp  DocumentText.cpp  DocumentText.h  Parameter.cpp  Parameter.h
Index/: IncidenceMatrix.cpp  IncidenceMatrix.h  InvertedIndex.cpp  InvertedIndex.h  NGramIndex.cpp  NGramIndex.h  PositionalIndex.cpp  PositionalIndex.h  PositionalPostingList.cpp  Posting.cpp  PostingList.cpp  PostingList.h  PostingListComparator.h  PostingSkip.cpp  PostingSkip.h  Term.cpp  Term.h  TermDictionary.cpp  TermDictionary.h  TermOccurrence.cpp  TermOccurrence.h  TermOccurrenceComparator.h  TermWeighting.h
Query/: QuertResultItemComparator.h  Query.cpp  Query.h  QueryResult.cpp  QueryResult.h  QueryResultItem.cpp  VectorSpaceModel.cpp  VectorSpaceModel.h
Test/: CollectionTest.cpp  MemoryCollectionTest.cpp
include/: Dictionary.h
src/: CMakeLists.txt
src/Document/: AbstractCollection.cpp  AbstractCollection.h  CategoryHierarchy.cpp  CategoryHierarchy.h  Collection.cpp  Collection.h  DiskCollection.cpp  DiskCollection.h  Document.cpp  Document.h  DocumentText.cpp  DocumentText.h  DocumentType.h  IndexType.h  (+9 more)
(+47 files in other folders)
